added more endpoints for user and schedules
